--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/ZoicanDenisUi/Bounce/issues"
   },
   "homepage": "https://github.com/ZoicanDenisUi/Bounce#readme",
-  "dependencies": {
+  "devDependencies": {
     "live-server": "^1.2.1"
   }
 }
