--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "live-server bin",
-    "compile": "concurrently --kill-others \"tsc -w\" \"live-server bin\"",
     "lint": "eslint .\\src\\**\\*.ts",
-    "lintAndFix": "eslint .\\src\\**\\*.ts --fix"
+    "lintAndFix": "eslint .\\src\\**\\*.ts --fix",
+    "build": "concurrently --kill-others \"webpack --watch \" \"live-server bin\""
   },
   "repository": {
     "type": "git",
@@ -23,13 +23,23 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
-    "concurrently": "^6.2.0",
     "eslint": "^7.31.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "@types/node": "^16.4.6",
+    "concurrently": "^6.2.0",
+    "css-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
     "live-server": "^1.2.1",
-    "typescript": "^4.3.5"
-  }
+    "mini-css-extract-plugin": "^2.1.0",
+    "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.4",
+    "typescript": "^4.3.5",
+    "webpack": "^5.47.0",
+    "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {}
 }
