--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server Public",
-    "compile": "concurrently --kill-others \"tsc -w\" \"live-server Public\"",
-    "lint":"npx eslint .\\Src\\**\\*.ts",
-    "lintAndFix":"npx eslint .\\Src\\**\\*.ts --fix"
+    "start": "live-server bin",
+    "compile": "concurrently --kill-others \"tsc -w\" \"live-server bin\"",
+    "lint": "npx eslint .\\Src\\**\\*.ts",
+    "lintAndFix": "npx eslint .\\Src\\**\\*.ts --fix"
   },
   "repository": {
     "type": "git",
@@ -21,15 +21,15 @@
   },
   "homepage": "https://github.com/ZoicanDenisUi/Bounce#readme",
   "devDependencies": {
-  "@typescript-eslint/eslint-plugin": "^4.28.4",
-  "@typescript-eslint/parser": "^4.28.4",
-  "concurrently": "^6.2.0",
-  "eslint": "^7.31.0",
-  "eslint-config-standard": "^16.0.3",
-  "eslint-plugin-import": "^2.23.4",
-  "eslint-plugin-node": "^11.1.0",
-  "eslint-plugin-promise": "^5.1.0",
-  "live-server": "^1.2.1",
-  "typescript": "^4.3.5"
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "concurrently": "^6.2.0",
+    "eslint": "^7.31.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "live-server": "^1.2.1",
+    "typescript": "^4.3.5"
   }
 }
