--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "bounce",
-  "version": "1.0.0",
-  "description": "First try",
-  "main": "index.html",
+  "name": "bounce-angular",
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server bin",
-    "lint": "eslint .\\src\\**\\*.ts",
-    "lintAndFix": "eslint .\\src\\**\\*.ts --fix",
-    "build": "concurrently --kill-others \"webpack --watch \" \"live-server bin\""
+    "ng": "ng",
+    "start": "ng serve --proxy-config proxy.conf.json",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "lint": "ng lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ZoicanDenisUi/Bounce.git"
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~12.1.2",
+    "@angular/cdk": "^12.1.3",
+    "@angular/common": "~12.1.2",
+    "@angular/compiler": "~12.1.2",
+    "@angular/core": "~12.1.2",
+    "@angular/forms": "~12.1.2",
+    "@angular/material": "^12.1.3",
+    "@angular/platform-browser": "~12.1.2",
+    "@angular/platform-browser-dynamic": "~12.1.2",
+    "@angular/router": "~12.1.2",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.2.0",
+    "zone.js": "~0.11.4"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ZoicanDenisUi/Bounce/issues"
-  },
-  "homepage": "https://github.com/ZoicanDenisUi/Bounce#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "@types/node": "^16.4.6",
-    "concurrently": "^6.2.0",
-    "css-loader": "^6.2.0",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.2",
-    "live-server": "^1.2.1",
-    "mini-css-extract-plugin": "^2.1.0",
-    "style-loader": "^3.2.1",
-    "ts-loader": "^9.2.4",
-    "typescript": "^4.3.5",
-    "webpack": "^5.47.0",
-    "webpack-cli": "^4.7.2"
-  },
-  "dependencies": {}
+    "@angular-devkit/build-angular": "~12.1.2",
+    "@angular-eslint/builder": "12.3.1",
+    "@angular-eslint/eslint-plugin": "12.3.1",
+    "@angular-eslint/eslint-plugin-template": "12.3.1",
+    "@angular-eslint/schematics": "12.3.1",
+    "@angular-eslint/template-parser": "12.3.1",
+    "@angular/cli": "~12.1.2",
+    "@angular/compiler-cli": "~12.1.2",
+    "@types/jasmine": "~3.8.0",
+    "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
+    "jasmine-core": "~3.8.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.3.2"
+  }
 }
